# baynext-ml

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  baynext.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml
docker/: mlflow.Dockerfile
src/baynext/: __init__.py  cli.py  logging.py  pipeline.py  utils.py
src/baynext/config/: __init__.py  analyze.py  distributions.py  load.py  log.py  pipeline.py  priors.py  sampling.py  train.py
src/baynext/tasks/: __init__.py  load.py  train.py
