[project]
name = "baynext-ml"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baynext-ml-cli",
    "baynext-ml-server",
    "baynext-ml-training",
    "baynext-ml-utils",
    "fastapi>=0.116.1",
    "google-meridian>=1.1.4",
    "typer>=0.16.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# uv add ./packages/* --editable 
baynext-ml-cli = { workspace = true }
baynext-ml-server = { workspace = true }
baynext-ml-training = { workspace = true }
baynext-ml-utils = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
